unpackaged/config/ofm/objects/Budget_Value__c/Budget_Value__c.object-meta.xml
<CustomObject>
    <description>Universal Budget grid cell: one category-period amount on a budget.</description>
    <label>Budget Value</label>
    <nameField>
        <label>Budget Value Number</label>
        <displayFormat>BV-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>