unpackaged/config/ofm/objects/Budget_Value__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Actual money reported against this cell in the Universal Budget grid's reporting mode (Currency-mode categories).</description>
    <inlineHelpText>What was actually spent, reported per period in reporting mode.</inlineHelpText>
</CustomField>