unpackaged/config/ofm/objects/Budget_Value__c/fields/Actual_Percent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Percent__c</fullName>
    <label>Actual Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Actual percentage reported against this cell in the Universal Budget grid's reporting mode (Percent-mode categories).</description>
    <inlineHelpText>What was actually achieved, reported per period in reporting mode.</inlineHelpText>
</CustomField>