unpackaged/config/ofm/objects/Budget_Value__c/fields/Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity__c</fullName>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Actual count reported against this cell in the Universal Budget grid's reporting mode (Quantity-mode categories).</description>
    <inlineHelpText>What was actually counted, reported per period in reporting mode.</inlineHelpText>
</CustomField>