unpackaged/config/ofm/objects/Budget_Value__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Budgeted money for Currency-mode categories; the Universal Budget grid reads and writes this cell value.</description>
    <inlineHelpText>The budgeted amount for this cell.</inlineHelpText>
</CustomField>