unpackaged/config/ofm/objects/Budget_Value__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <label>Attachments</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Uploaded-files JSON written by the Flow Tool Kit file upload form field (#46). Mapped as the Value FileUpload Field so the Universal Budget grid can light its attachment indicator. Do not edit by hand.</description>
    <inlineHelpText>Attach the receipt or invoice that supports this line.</inlineHelpText>
</CustomField>