unpackaged/config/ofm/objects/Budget_Value__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Budget Category</label>
    <referenceTo>Budget_Category__c</referenceTo>
    <relationshipLabel>Budget Values</relationshipLabel>
    <relationshipName>Budget_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
    <type>MasterDetail</type>
    <description>Row this value belongs to in the Universal Budget grid.</description>
    <inlineHelpText>The budget category this value belongs to.</inlineHelpText>
</CustomField>