unpackaged/config/ofm/objects/Budget_Value__c/fields/Cell_Key__c.field-meta.xml
<CustomField>
    <fullName>Cell_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>One record per budget cell (#103): Category Id | Period Id | Grouping Identifier, stamped by the OFM Budget Value (Before Save → Cell Key) flow when a record is created or moves to another cell. Unique, so Salesforce rejects a second record for the same line in the same period from any source. Blank when the record has no Grouping Identifier, and on records that existed before the flow and never moved.</description>
    <label>Cell Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
    <inlineHelpText>Set automatically. Prevents two budget values for the same line item in the same period.</inlineHelpText>
</CustomField>