unpackaged/config/ofm/objects/Budget_Value__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Line Item Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Display name of this value's line-item row in the Universal Budget grid; the grid writes it when rows are named.</description>
    <inlineHelpText>The line item name shown in the budget grid.</inlineHelpText>
</CustomField>