unpackaged/config/ofm/objects/Budget_Value__c/fields/Fixed__c.field-meta.xml
<CustomField>
    <fullName>Fixed__c</fullName>
    <label>Fixed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>When checked, the Universal Budget grid renders this cell locked (read-only); the amount is fixed by the funder.</description>
    <inlineHelpText>Check to lock this cell in the budget grid.</inlineHelpText>
</CustomField>