unpackaged/config/ofm/objects/Budget_Value__c/fields/Grouping_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Identifier__c</fullName>
    <label>Grouping Identifier</label>
    <length>255</length>
    <type>Text</type>
    <description>Correlates the values of one line-item row across periods; the Universal Budget grid generates and maintains it for line-item categories.</description>
    <inlineHelpText>Managed by the budget grid to keep one line item's cells together across periods.</inlineHelpText>
</CustomField>