unpackaged/config/ofm/objects/Budget_Value__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <label>Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Budgeted percentage for Percent-mode categories; the Universal Budget grid caps each row at 100% across periods.</description>
    <inlineHelpText>The budgeted percentage for this cell (Percent mode).</inlineHelpText>
</CustomField>