unpackaged/config/ofm/objects/Budget_Value__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Budget Period</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Budget_Period__c</referenceTo>
    <relationshipLabel>Budget Values</relationshipLabel>
    <relationshipName>Budget_Values</relationshipName>
    <type>Lookup</type>
    <description>Column this value belongs to in the Universal Budget grid; blank on periodless budgets.</description>
    <inlineHelpText>The budget period this value belongs to. Blank when the budget has no periods yet.</inlineHelpText>
</CustomField>