unpackaged/config/ofm/objects/Budget_Value__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Budgeted count for Quantity-mode categories; the Universal Budget grid reads and writes this cell value.</description>
    <inlineHelpText>The budgeted count for this cell (Quantity mode).</inlineHelpText>
</CustomField>